# NetDbg

./: .gitignore  CMakeLists.txt  README.md
src/: ClientWidget.cpp  ClientWidget.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  ServerWidget.cpp  ServerWidget.h  SocketConfig.cpp  SocketConfig.h  TcpClientWidget.cpp  TcpClientWidget.h  TcpClientWidget.ui  TcpServerWidget.cpp  TcpServerWidget.h  TcpServerWidget.ui  UdpClientWidget.cpp  UdpClientWidget.h  UdpClientWidget.ui  UdpServerWidget.cpp  UdpServerWidget.h  UdpServerWidget.ui  main.cpp
